I created a new recipe crispy-hash-brown.html and I added; its title, heading, image, ingredients and steps. I also modified index.html by adding a new link to the later page I created. I added a new image in image folder

--- a/recipes/mancakes.html
+++ b/recipes/mancakes.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Mancakes</h1>
-    <img src="../images/mancakes.webp" alt="mancakes" width="300">
+    <img src="../images/mancakes.webp" alt="mancakes" height="300">
     <h3>Description</h3>
     <p>Sweet/savory hybrids can be tricky sometimes but I think this worked beautifully. We are talking about bacon, cheese, and onions after all, so it wasn't that big of a shock. The way the chipotle-spiced maple syrup brought everything together was a risk well rewarded.</p>
     <h3>Ingredients</h3>
