--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <a href="./recipes/mancakes.html">Mancakes</a>
+    <ul>
+        <li><a href="./recipes/mancakes.html">Mancakes</a></li>
+        <li><a href="./recipes/crispy-hash-brown.html">Crispy Hash Brown</a></li>
+    </ul>
+    
 </body>
 </html>
