Wrote a short description in README.md about the project and the knowledge I will gain after the project.

--- a/recipes/crispy-hash-brown.html
+++ b/recipes/crispy-hash-brown.html
@@ -8,10 +8,15 @@
 <body>
     <h1>Crispy Hash Brown</h1>
     <img src="../images/crispy-hash-browns.webp" alt="Crispy Hash Brown" height="300">
+
+    <!-- Crispy Hash Brown Description -->
+
     <h3>Description</h3>
     <p>Believe it or not, making crispy hash browns is actually quite easy. First, shred your potatoes using your preferred method — either with a grater, food processor, or mandoline. Rinse the potatoes until the water is clear, then drain and squeeze out all the remaining liquid (this will ensure the hash browns are extra crispy).</p>
 
     <p>Next, you'll add in your binding agents (flour and egg) as well as any other ingredients or seasonings. This recipe only calls for onion, but you could also add cheese, cayenne pepper, or garlic to the mixture.</p>
+
+    <!-- Crispy Hash Brown Ingredients -->
 
     <h3>Ingredients</h3>
     <ul>
@@ -22,6 +27,8 @@
         <li>1 cup oil for frying, or as needed</li>
         <li>salt and pepper to taste</li>
     </ul>
+
+    <!-- Crispy Hash Brown Steps -->
 
     <h3>Steps</h3>
     <ol>
