--- a/recipes/mancakes.html
+++ b/recipes/mancakes.html
@@ -8,8 +8,13 @@
 <body>
     <h1>Mancakes</h1>
     <img src="../images/mancakes.webp" alt="mancakes" height="300">
+
+    <!-- Mancakes Description -->
     <h3>Description</h3>
     <p>Sweet/savory hybrids can be tricky sometimes but I think this worked beautifully. We are talking about bacon, cheese, and onions after all, so it wasn't that big of a shock. The way the chipotle-spiced maple syrup brought everything together was a risk well rewarded.</p>
+
+    <!-- Mancakes Ingredients -->
+
     <h3>Ingredients</h3>
     <ul>
         <li>8 ounces bacon, chopped</li>
@@ -30,6 +35,9 @@
         <li>1 teaspoon vegetable oil</li>
         <li>1 teaspoon butter</li>
     </ul>
+
+    <!-- Mancakes Steps -->
+
     <h3>Steps</h3>
     <ol>
         <li>Place bacon in a large skillet and cook over medium-high heat, stirring occasionally, until evenly browned, about 10 minutes; remove from heat. Stir green onions into bacon and saute in hot fat until slightly softened, 1 to 2 minutes. Transfer bacon mixture to a strainer to drain, retaining drippings.</li>
