--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Odin Recipes</title>
 </head>
 <body>
+    <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/mancakes.html">Mancakes</a></li>
         <li><a href="./recipes/crispy-hash-brown.html">Crispy Hash Brown</a></li>
-    </ul>
-    
+        <li><a href="./recipes/peanut-butter-cookies.html">Peanut Butter Cookies</a></li>
+    </ul>   
 </body>
 </html>
